--- a/template/index.html
+++ b/template/index.html
@@ -94,13 +94,18 @@
                 <div class="header-list-style">
                   <span class="cat"> </span>
 
-                  <h2 class="grid-title">
+                  <span class="grid-name">
+                    <a data-toggle="modal" data-target="#exampleModalCenter"
+                    
+                      >Tuấn Nguyễn</a
+                    >
+                  </span>
+                  <span class="grid-age">
                     <a
                       href="/threads/grab-noi-van-se-hoat-dong-binh-thuong-tai-vn-sau-nghi-dinh-10-2020-nd-cp.9693/"
-                      >Huan Nguyen</a
+                      >19</a
                     >
-                  </h2>
-
+                  </span>
                   <div class="grid-post-box-meta">
                     <span class="author-italic"
                       ><image src="./image/heart.png" />
@@ -124,7 +129,7 @@
                     >
                   </div>
                 </div>
-
+              
                 <div class="item-content">
                   <div class="bbWrapper">
                     Tìm một người giống tôi chân thành và nghiêm túc , độc thân
@@ -147,13 +152,18 @@
               <div class="user-item-content">
                 <div class="header-list-style">
                   <span class="cat"> </span>
-
-                  <h2 class="grid-title">
-                    <a
-                      href="/threads/grab-la-cong-ty-cong-nghe-co-moi-truong-lam-viec-tot-nhat-viet-nam-2020.9675/"
-                      >Hòa Pham</a
+                  <span class="grid-name">
+                    <a data-toggle="modal" data-target="#exampleModal"
+                      href="/threads/grab-noi-van-se-hoat-dong-binh-thuong-tai-vn-sau-nghi-dinh-10-2020-nd-cp.9693/"
+                      >Huân Nguyễn</a
                     >
-                  </h2>
+                  </span>
+                  <span class="grid-age">
+                    <a
+                      href="/threads/grab-noi-van-se-hoat-dong-binh-thuong-tai-vn-sau-nghi-dinh-10-2020-nd-cp.9693/"
+                      >23</a
+                    >
+                  </span>
 
                   <div class="grid-post-box-meta">
                     <span class="author-italic"
@@ -906,7 +916,25 @@
         </div>
       </div>
     </main>
-
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
