--- a/template/index.html
+++ b/template/index.html
@@ -73,25 +73,24 @@
       </div>
     </nav>
     <main role="main" class="container">
-      <div class="filter" style="border: 1px solid #333;">
-        <div style="padding: 5px 10px;" class="button-group filters-button-group">
+    
+
+      
+      <div class="wrap-list-user">
+        <div style="padding: 10px;" class="button-group filters-button-group">
+          <h2>Filter</h2>
           <button class="button is-checked" data-filter="*">Nam</button>
           <button class="button" data-filter=".metal">Nu</button>
           <button class="button" data-filter=".transition">Gay</button>
           <button class="button" data-filter=".alkali, .alkaline-earth">Less</button>
+          <button class="button is-checked" data-filter="*">Độc Thân</button>
+          <button class="button" data-filter=".metal">Đang có người yêu</button>
+          <button class="button" data-filter=".transition">Đã có gia đình</button>
           <button class="button is-checked" data-filter="*">Người yêu lâu dài</button>
           <button class="button" data-filter=".metal">Người yêu ngắn hạn</button>
           <button class="button" data-filter=".transition">người tâm sự</button>
           <button class="button" data-filter=".alkali, .alkaline-earth">Tìm bạn mới</button>
-          <button class="button is-checked" data-filter="*">Độc Thân</button>
-          <button class="button" data-filter=".metal">Đang có người yêu</button>
-          <button class="button" data-filter=".transition">Đã có gia đình</button>
         </div>
-      </div>
-
-      
-      <div class="wrap-list-user">
-       
         <ul
           class="list-infor-user"
           data-xf-init="xencat-infinite "
