--- a/template/css/style.css
+++ b/template/css/style.css
@@ -59,33 +59,75 @@ ul.list-infor-user {
 
 .top-by-time li.user-item .item > .thumbnail {
   width: 30%;
-    float: left;
-    max-width: 370px;
-    margin: 0px;
+  float: left;
+  max-width: 370px;
+  margin: 0px;
 }
 .top-by-time li.user-item .item > .thumbnail img {
+  width: 60px;
+  height: 60px;
+  margin: 5px;
+}
+
+.top-by-time .user-item {
+  border-bottom: none;
+}
+.grid-name,
+.grid-age {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+.grid-name {
+  font-size: 2rem;
+}
+.grid-age {
+  font-size: 1.5rem;
+}
+.pagination {
+  max-width: 315px;
+  margin: auto;
+}
+/*dropdown */
+button {
+  padding: 5px;
+  margin: 5px;
+}
+@media (max-width: 1200px) {
+  .list-infor-user .user-item-content {
+    padding-left: 100px;
+  }
+
+  .top-by-time .list-infor-user .user-item-content {
+    padding-left: 80px;
+  }
+}
+@media (max-width: 780px) {
+  .top-by-time {
+    display: none;
+  }
+}
+@media (max-width: 411px) {
+  .list-infor-user li.user-item .item > .thumbnail img {
     width: 60px;
     height: 60px;
     margin: 5px;
-}
+  }
 
-.top-by-time .user-item{
-  border-bottom: none;
-}
-.grid-name, .grid-age{
-  margin-bottom: .5rem;
-  font-weight: 500;
-  line-height: 1.2;
-} 
-.grid-name{
-  font-size: 2rem;
-}
-.grid-age{
-  font-size: 1.5rem;
-}
+  .list-infor-user .user-item-content {
+    padding-left: 80px;
+  }
+  .list-infor-user .user-item-content .grid-name {
+    font-size: 1.5rem;
+  }
 
-/*dropdown */
-button{
-  padding: 5px;
-  margin: 5px;
+  #userImageSlide .carousel-item {
+    height: 450px;
+  }
+}
+@media (max-width: 365px) {
+
+  #userImageSlide .carousel-item {
+    height: 400px;
+  }
 }
