--- a/template/index.html
+++ b/template/index.html
@@ -8,12 +8,7 @@
     />
 
     <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
+
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -72,10 +67,7 @@
         </form>
       </div>
     </nav>
-    <main role="main" class="container">
-    
-
-      
+    <main role="main" class="container">  
       <div class="wrap-list-user">
         <div style="padding: 10px;" class="button-group filters-button-group">
           <h2>Filter</h2>
@@ -125,7 +117,7 @@
                   </span>
                   <div class="grid-post-box-meta">
                     <span class="author-italic"
-                      ><image src="./image/heart.png" />
+                      ><image src="./image/heart2.png" />
                       <span class="usernameu-concealed"
                         ><span class="username--staff username--moderator"
                           >389</span
@@ -186,7 +178,7 @@
 
                   <div class="grid-post-box-meta">
                     <span class="author-italic"
-                      ><image src="./image/heart.png" />
+                      ><image src="./image/heart2.png" />
                       <span class="usernameu-concealed"
                         ><span class="username--staff">230</span></span
                       ></span
@@ -440,6 +432,17 @@
               </div>
             </article>
           </li>
+        </ul>
+        <ul class="pagination">
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">4</a></li>
+          <li class="page-item"><a class="page-link" href="#">5</a></li>
+          <li class="page-item"><a class="page-link" href="#">7</a></li>
+          <li class="page-item"><a class="page-link" href="#">8</a></li>
+          <li class="page-item"><a class="page-link" href="#">9</a></li>
+          <li class="page-item"><a class="page-link" href="#">10</a></li>
         </ul>
       </div>
       <div class="top-by-time">
@@ -945,31 +948,50 @@
     >
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalCenterTitle">
-              Modal title
-            </h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
+
           <div class="modal-body">
-            ...
+            <div id="userImageSlide" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#userImageSlide" data-slide-to="0" class="active"></li>
+                <li data-target="#userImageSlide" data-slide-to="1"></li>
+                <li data-target="#userImageSlide" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="image/01.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="image/02.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="image/03.jpg"  alt="Third slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#userImageSlide" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#userImageSlide" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+            <span class="grid-name">
+              <a data-toggle="modal" data-target="#exampleModalCenter"
+                >Tuấn Nguyễn</a
+              >
+            </span>
+            <span class="grid-age">
+              <a
+                href="/threads/grab-noi-van-se-hoat-dong-binh-thuong-tai-vn-sau-nghi-dinh-10-2020-nd-cp.9693/"
+                >19</a
+              >
+            </span>
           </div>
           <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-            >
-              Close
-            </button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <image   src="image/comment.png"/>
+            <image  src="image/heart.png"/>          
+           <image src="image/cancel.png" data-dismiss="modal"/>
           </div>
         </div>
       </div>
